--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "flowbite": "^1.7.0",
+    "flowbite-react": "^0.4.10",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "wasm-loader": "^1.3.0"
   }
 }
