--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
+    "types": ["@nautilus-js/eip12-types"],
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
