--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
-    "wasm-loader": "^1.3.0"
+    "wasm-loader": "^1.3.0",
+    "zeromq": "6.0.0-beta.17"
   },
   "devDependencies": {
     "@nautilus-js/eip12-types": "^0.1.9"
