--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,11 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "Components/FlatpickerMin.js"
+  ],
+  "exclude": ["node_modules", "**/*.wasm"]
 }
