--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
+package-lock.json
 
 # local env files
 .env*.local
+.env.local
 
 # vercel
 .vercel
@@ -33,3 +36,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# ide
+.idea
+/.idea
