--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "eslint-plugin-next": "^0.0.0",
     "framer-motion": "^7.0.0",
     "moment": "^2.29.4",
-    "next": "13.1.6",
+    "next": "13.4.8",
     "nft.storage": "^7.0.3",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
+    "postcss": "8.4.24",
     "react-drag-drop-files": "^2.3.8",
     "react-dropzone": "^14.2.3",
     "react-flatpickr": "^3.10.13",
@@ -52,23 +53,27 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-time-picker": "^5.2.0",
-    "react-toastify": "^9.0.7",
+    "react-toastify": "^9.1.3",
     "sharp": "^0.31.3",
     "socket.io-client": "^4.7.1",
     "tailwindcss": "^3.2.7",
     "wasm-dce": "1.x",
     "wasm-loader": "^1.3.0",
+    "zeromq": "6.0.0-beta.17",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@nautilus-js/eip12-types": "^0.1.9",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-flatpickr": "^3.8.8",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.36.0",
-    "eslint-config-next": "13.1.6",
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.8",
+    "flowbite": "^1.7.0",
+    "flowbite-react": "^0.4.10",
     "postcss": "^8.4.21",
     "prettier": "2.8.4",
-    "typescript": "^5.0.4"
+    "typescript": "5.1.6"
   }
 }
