--- a/package.json
+++ b/package.json
@@ -34,15 +34,16 @@
     "ergo-lib-wasm-browser": "^0.23.0",
     "eslint-plugin-next": "^0.0.0",
     "framer-motion": "^7.0.0",
+    "json-bigint": "^1.0.0",
     "moment": "^2.29.4",
     "next": "13.1.6",
     "nft.storage": "^7.0.3",
+    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
-    "postcss": "8.4.24",
     "react-drag-drop-files": "^2.3.8",
     "react-dropzone": "^14.2.3",
     "react-flatpickr": "^3.10.13",
@@ -57,16 +58,18 @@
     "sharp": "^0.31.3",
     "socket.io-client": "^4.7.1",
     "tailwindcss": "^3.2.7",
+    "uuid": "^9.0.0",
     "wasm-dce": "1.x",
     "wasm-loader": "^1.3.0",
-    "zeromq": "6.0.0-beta.17",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zeromq": "6.0.0-beta.17"
   },
   "devDependencies": {
     "@nautilus-js/eip12-types": "^0.1.9",
     "@types/react-copy-to-clipboard": "^5.0.4",
-    "@types/react-flatpickr": "^3.8.8",
     "@types/react-dom": "18.2.6",
+    "@types/react-flatpickr": "^3.8.8",
+    "@types/uuid": "^9.0.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
