--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-scripts": "5.0.1",
     "react-time-picker": "^5.2.0",
     "react-toastify": "^9.1.3",
+    "rxjs": "^7.8.1",
     "sharp": "^0.31.3",
     "socket.io-client": "^4.7.1",
     "tailwindcss": "^3.2.7",
