--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
     "uuid": "^9.0.0",
     "wasm-dce": "1.x",
     "wasm-loader": "^1.3.0",
-    "web-vitals": "^2.1.4",
-    "zeromq": "6.0.0-beta.17"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@nautilus-js/eip12-types": "^0.1.9",
