--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "rxjs": "^7.8.1",
     "sharp": "^0.31.3",
     "socket.io-client": "^4.7.1",
+    "swiper": "^11.0.6",
     "tailwindcss": "^3.2.7",
     "uuid": "^9.0.0",
     "wasm-dce": "1.x",
