--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ergo-lib-wasm-browser": "^0.23.0",
     "eslint-plugin-next": "^0.0.0",
     "framer-motion": "^7.0.0",
+    "gsap": "^3.12.5",
     "json-bigint": "^1.0.0",
     "moment": "^2.29.4",
     "next": "13.1.6",
@@ -67,7 +68,6 @@
     "rxjs": "^7.8.1",
     "sharp": "^0.31.3",
     "socket.io-client": "^4.7.1",
-    "swiper": "^11.0.6",
     "tailwindcss": "^3.2.7",
     "uuid": "^9.0.0",
     "wasm-dce": "1.x",
